adjusted more xrefs

--- a/modules/reference/pages/images/images-image-list.adoc
+++ b/modules/reference/pages/images/images-image-list.adoc
@@ -13,7 +13,7 @@ image::images_list_images.png[scaledwidth=80%]
 * [guimenu]``Version`` and [guimenu]``Revision``:
 * [guimenu]``Updates``: Shows which type of update action is applicable to the image or confirms that the image is up-to-date. For more information about these icons, see:
 
-pass:c[xref:<<reference-webui-systems.adoc#ref.webui.systems.systems, Systems>>].
+xref:reference:systems/systems-overview.adoc[].
 
 * [guimenu]``Patches`` and [guimenu]``Packages``:
 * [guimenu]``Build``:
@@ -21,8 +21,9 @@ pass:c[xref:<<reference-webui-systems.adoc#ref.webui.systems.systems, Systems>>]
 * [guimenu]``Actions``: btn:[Details] and btn:[Delete] button. btn:[Details] opens a the Image Details page.
 
 In the upper right corner offers several action buttons: The btn:[Delete] button appears when one or more images are selected. btn:[Import] and btn:[Refresh] are default buttons. btn:[Import] allows to import pre-built images; for more information, see
+xref:administration:image-management.adoc[].
 
-pass:c[<<advanced_topics_image_management.adoc#at.images.docker.importing, Importing Docker Images>>].
+
 
 == Image Details
 
