--- a/modules/reference/pages/systems/system-details/sd-packages.adoc
+++ b/modules/reference/pages/systems/system-details/sd-packages.adoc
@@ -3,13 +3,7 @@
 
 Manage the software packages on the system.
 Most of the following actions can also be performed via action chains.
-For further information on action chains, see
-ifndef::env-github,backend-html5[]
-<<ref.webui.schedule.chains>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-schedule.adoc#ref.webui.schedule.chains, Action Chains>>.
-endif::[]
+For further information on action chains, see xref:reference:schedule/action-chains.adoc[].
 
 
 image::system_details_traditional_software_packages.png[scaledwidth=80%]
