--- a/modules/reference/pages/systems/system-details/sd-patches.adoc
+++ b/modules/reference/pages/systems/system-details/sd-patches.adoc
@@ -2,14 +2,7 @@
 = SD Patches
 
 This subtab contains a list of patch (errata) alerts applicable to the system.
-Refer to
-ifndef::env-github,backend-html5[]
-<<ref.webui.intro.patch_alerts>>
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-intro.adoc##ref.webui.intro.patch_alerts, Alerts>>
-endif::[]
-for meanings of the icons on this tab.
+Refer to xref:reference:navigation/patch-alert-icons.adoc[] for meanings of the icons on this tab.
 
 image::system_details_traditional_software_patches.png[scaledwidth=80%]
 
