--- a/modules/reference/pages/systems/system-details/sd-provisioning.adoc
+++ b/modules/reference/pages/systems/system-details/sd-provisioning.adoc
@@ -22,13 +22,8 @@ Both features are described in the sections that follow.
 == Autoinstallation
 
 The [guimenu]``Schedule`` subtab allows you to configure and schedule an autoinstallation for this system.
-For background information about autoinstallation, see
-ifndef::env-github,backend-html5[]
-<<ref.webui.systems.autoinst>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-systems-autoinstallation.adoc#ref.webui.systems.autoinst, Autoinstallation>>.
-endif::[]
+For background information about autoinstallation, see xref:reference:systems/autoinst-overview.adoc[].
+
 
 image::system_details_traditional_provisioning_schedule_wizard.png[scaledwidth=80%]
 
@@ -38,14 +33,7 @@ Choose from the list of available profiles.
 [NOTE]
 ====
 You must first create a profile before it appears on this subtab.
-If you have not created any profiles, refer to
-ifndef::env-github,backend-html5[]
-<<ref.webui.systems.autoinst.profiles.create>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-systems-autoinstallation.adoc#ref.webui.systems.autoinst.profiles.create, Autoinstallation Profiles>>.
-endif::[]
-before scheduling an autoinstallation for a system.
+If you have not created any profiles, refer to xref:reference:systems/autoinst-profiles.adoc[] before scheduling an autoinstallation for a system.
 ====
 
 To alter autoinstallation settings, click the btn:[Advanced Configuration] button.
@@ -95,13 +83,8 @@ Understanding this hierarchy can alleviate confusion when using variables in {ki
 ====
 
 Using variables are one part of the larger Cobbler infrastructure for creating templates that can be shared between multiple profiles and systems.
-For more information about Cobbler and {kickstart} templates, refer to
-ifndef::env-github,backend-html5[]
-<<advanced.topics.cobbler>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<advanced_topics_cobbler.adoc#advanced.topics.cobbler, Cobbler>>.
-endif::[]
+For more information about Cobbler and {kickstart} templates, refer to xref:client-configuration:cobbler.adoc[].
+
 
 
 [[sd-power-management]]
@@ -125,7 +108,7 @@ If a power management operation succeeds on a system, it will also be noted in i
 Power management functionalities can also be used from the system set manager to operate on multiple systems at the same time.
 Specifically, you can change power management configuration parameters or apply operations (power on, off, reboot) to multiple systems at once:
 
-. Add the respective systems to the system set manager as described in <<ref.webui.systems.ssm>>.
+. Add the respective systems to the system set manager as described in xref:reference:systems/ssm-overview.adoc[].
 . Select systems on the menu:Main Menu[Systems > Overview], then menu:Main Menu[System Set Manager >  Provisioning > Power Management Configuration] to change one or more configuration parameters for all systems in the set. Note that any field left blank will not alter the configuration parameter in selected systems.
 . When all configuration parameters are set correctly, click menu:Main Menu[Systems > System Set Manager >  Provisioning > Power Management Operations] to power on, off or reboot systems from the set.
 
