--- a/modules/reference/pages/systems/system-details/sd-software-channels.adoc
+++ b/modules/reference/pages/systems/system-details/sd-software-channels.adoc
@@ -35,10 +35,4 @@ Since the 3.1 maintenance update (2018) changing the channels is an action that
 Earlier channel changes were applied immediately.
 ====
 
-For more information about channel management, see
-ifndef::env-github,backend-html5[]
-<<ref.webui.channels.software>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-channels.adoc#ref.webui.channels.software, Channel Management>>
-endif::[]
+For more information about channel management, see xref:reference:software/manage-channels.adoc[].
