--- a/modules/reference/pages/systems/virtual-host-managers.adoc
+++ b/modules/reference/pages/systems/virtual-host-managers.adoc
@@ -26,12 +26,7 @@ After selecting menu:Create[VMware-based] enter the location of your VMware-base
 Enter a [guimenu]``Label``, [guimenu]``Hostname``, [guimenu]``Port``, [guimenu]``Username`` and [guimenu]``Password``.
 Finally click the btn:[Add Virtual Host Manager] button.
 For detailed information on working with a VMware-based Virtual Host Manager, see
-ifndef::env-github,backend-html5[]
-<<advanced.topics.adding.vmware.esxi.host>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<advanced_topics_adding_a_vmware_esxi_host_manager.adoc#advanced.topics.adding.vmware.esxi.host, VMware-based Virtual Host Manager>>.
-endif::[]
+xref:administration:virtual-hosts.adoc[].
 
 
 image::systems_virtual_host_managers_vmware.png[scaledwidth=80%]
