--- a/modules/reference/pages/users/system-group-configuration.adoc
+++ b/modules/reference/pages/users/system-group-configuration.adoc
@@ -10,15 +10,7 @@ System Groups help when different users shall administer different groups of sys
 Enable [guimenu]``Create a user default System Group`` and confirm with btn:[Update].
 
 Assign such a group to systems via the menu:System Details[Groups > Join] subtab.
-For more information, see:
-
-ifndef::env-github,backend-html5[]
-<<s5-sm-system-details-groups-join>>.
-endif::[]
-
-ifdef::env-github,backend-html5[]
-<<reference-webui-systems.adoc#s5-sm-system-details-groups-join, Groups > Join>>.
-endif::[]
+For more information, see: xref:reference:systems/system-details/sd-groups.adoc[].
 
 
 image::users_system_group_config.png[scaledwidth=80%]
@@ -36,5 +28,5 @@ Users can join such groups via the [guimenu]``System Groups`` of the user detail
 image::users_system_group_config_external_auth.png[scaledwidth=80%]
 
 
-For more information, see: <<s4-usr-active-details-sysg>>.
+For more information, see xref:reference:users/user-details.adoc[].
 
