--- a/modules/reference/pages/users/user-details.adoc
+++ b/modules/reference/pages/users/user-details.adoc
@@ -46,13 +46,7 @@ To delete a user:
 . Click the [guimenu]``Delete User`` link in the upper right corner of the dialog.
 . Click the btn:[Delete User] button to permanently delete the user.
 
-For instructions to deactivate your own account, refer to
-ifndef::env-github,backend-html5[]
-<<ref.webui.overview.account.deactivate>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-overview.adoc#ref.webui.overview.account.deactivate, Account Deactivation>>.
-endif::[]
+For instructions to deactivate your own account, refer to xref:reference:home/user-account-account-deactivation.adoc[].
 
 
 
@@ -78,24 +72,11 @@ The systems must be in system groups for which the user has permissions to manag
 * [guimenu]``SUSE Manager Administrator`` -- This role allows a user to perform any function available in {productname}.
 
 As the master account for your organization, the person holding this role can alter the privileges of all other accounts of this organization, and conduct any of the tasks available to the other roles.
-Like with other roles, multiple {productname} administrators may exist. Go to menu:Main Menu[Admin > Users] and click the check box in the [guimenu]``SUSE Manager Admin`` row. For more information, see:
-
-ifndef::env-github,backend-html5[]
-<<ref.webui.admin.users>>.
-endif::[]
-
-ifdef::env-github,backend-html5[]
-<<reference-webui-admin.adoc#ref.webui.admin.users, Admin > Users>>.
-endif::[]
+Like with other roles, multiple {productname} administrators may exist. Go to menu:Main Menu[Admin > Users] and click the check box in the [guimenu]``SUSE Manager Admin`` row. For more information, see xref:reference:admin/users.adoc[]
 
 * A [guimenu]``SUSE Manager Administrator`` can create foreign organizations; but a [guimenu]``SUSE Manager Administrator`` can only create users for an organization if he is entitled with organization administrator privileges for this organization.
-* [guimenu]``Organization Administrator`` -- This role provides a user with all the permissions other administrators have, namely the activation key, configuration, channel, and system group administrator. A [guimenu]``Organization Administrator`` is not entitled to perform actions that belong to the menu:Main Menu[Admin] features
-ifndef::env-github,backend-html5[]
-(see <<ref.webui.admin>>).
-endif::[]
-ifdef::env-github,backend-html5[]
-(see <<reference-webui-admin.adoc#ref.webui.admin, Admin>>).
-endif::[]
+* [guimenu]``Organization Administrator`` -- This role provides a user with all the permissions other administrators have, namely the activation key, configuration, channel, and system group administrator. A [guimenu]``Organization Administrator`` is not entitled to perform actions that belong to the menu:Main Menu[Admin] features. For more information see xref:reference:admin/organizations.adoc[].
+
 * [guimenu]``Activation Key Administrator`` -- This role is designed to manage your collection of activation keys. A user assigned to this role can modify and delete any key within your organization.
 * [guimenu]``Image Administrator`` -- This role is designed to manage Image building. Modifiable content includes Image Profiles, Image Builds and Image Stores. A user assigned with this role can modify and delete all content located under the menu:Main Menu[Images]. These changes will be applied across the organization.
 * [guimenu]``Configuration Administrator`` -- This role enables a user to manage the configuration of systems within the organization, using either the {productname} {webui} or tool from the [package]#mgr-cfg-management# package.
@@ -115,12 +96,7 @@ Click btn:[Update] to submit your changes.
 == System Groups
 
 This tab displays a list of system groups the user may administer; for more information about system groups, see
-ifndef::env-github,backend-html5[]
-<<ref.webui.systems.systemgroups>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-systems.adoc#ref.webui.systems.systemgroups, Systems > System Groups>>.
-endif::[]
+xref:reference:systems/system-groups.adoc[].
 
 
 image::users_details_system_groups.png[scaledwidth=80%]
@@ -148,15 +124,8 @@ image::users_details_systems.png[scaledwidth=80%]
 To carry out tasks on some of these systems, select the set of systems by checking the boxes to the left and click the btn:[Update List] button.
 Use the [guimenu]``System Set Manager`` page to execute actions on those systems.
 Clicking the name of a system takes you to its [guimenu]``System Details`` page.
-Refer to:
+Refer to xref:reference:systems/system-details/sd-groups.adoc[].
 
-ifndef::env-github,backend-html5[]
-<<s3-sm-system-details>>.
-endif::[]
-
-ifdef::env-github,backend-html5[]
-<<reference-webui-systems.adoc#s3-sm-system-details, Systems > System Groups>>.
-endif::[]
 
 
 [[s4-usr-active-details-chans]]
