all xrefs in reference complete

--- a/modules/reference/pages/systems/system-details/sd-configuration.adoc
+++ b/modules/reference/pages/systems/system-details/sd-configuration.adoc
@@ -10,13 +10,7 @@ The following sections describe these and other available options on the menu:Sy
 [NOTE]
 ====
 To manage the configuration of a system, it must have the latest [package]#rhncfg*# packages installed.
-Refer to
-ifndef::env-github,backend-html5[]
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-configuration.adoc#ref.webui.config.preparing, Scheduled Actions>>
-endif::[]
-for instructions on enabling and disabling scheduled actions for a system.
+Refer to xref:reference:configuration/config-menu.adoc[] for instructions on enabling and disabling scheduled actions for a system.
 ====
 
 This section is available to normal users with access to systems that have configuration management enabled.
