--- a/modules/reference/pages/systems/system-groups.adoc
+++ b/modules/reference/pages/systems/system-groups.adoc
@@ -17,7 +17,7 @@ The [guimenu]``System Groups`` list displays all system groups.
 The list contains several columns for each group:
 
 * [guimenu]``Select`` -- Via the check boxes add all systems in the selected groups to the [guimenu]``System Set Manager`` by clicking the btn:[Update] button. All systems in the selected groups are added to the [guimenu]``System Set Manager`` . You can then use the [guimenu]``System Set Manager`` to perform actions on them simultaneously. It is possible to select only those systems that are members of all of the selected groups, excluding those systems that belong only to one or some of the selected groups. To do so, select the relevant groups and click the btn:[Work with Intersection] button. To add all systems of all selected groups, click the btn:[Work with Union] button. Each system will show up once, regardless of the number of groups to which it belongs. Refer to xref:reference:systems/ssm-overview.adoc[] for details.
-* [guimenu]``Updates`` -- Shows which type of patch alerts are applicable to the group or confirms that all systems are up-to-date. Clicking a group's status icon takes you to the [guimenu]``Patch`` tab of its [guimenu]``System Group Details`` page. Refer to <<ref.webui.systems.systemgroups.details>> for more information.
+* [guimenu]``Updates`` -- Shows which type of patch alerts are applicable to the group or confirms that all systems are up-to-date. Clicking a group's status icon takes you to the [guimenu]``Patch`` tab of its [guimenu]``System Group Details`` page. Refer to xref:reference:systems/system-groups.adoc[] for more information.
 +
 
 The status icons call for differing degrees of attention:
@@ -26,8 +26,8 @@ The status icons call for differing degrees of attention:
 ** image:fa-exclamation-circle.svg[Exclamation Circle,scaledwidth=1.6em] -- Critical patches available, update _strongly_ recommended.
 ** image:fa-warning.svg[Warning,scaledwidth=1.6em] -- Updates available and recommended.
 * [guimenu]``Health`` Status of the systems in the group, reported by probes.
-* [guimenu]``Group Name`` -- The name of the group as configured during its creation. The name should be explicit enough to distinguish from other groups. Clicking the name of a group takes you to the [guimenu]``Details`` tab of its [guimenu]``System Group Details`` page. Refer to <<ref.webui.systems.systemgroups.details>> for more information.
-* [guimenu]``Systems`` -- Total number of systems in the group. Clicking the number takes you to the [guimenu]``Systems`` tab of the [guimenu]``System Group Details`` page for the group. Refer to <<ref.webui.systems.systemgroups.details>> for more information.
+* [guimenu]``Group Name`` -- The name of the group as configured during its creation. The name should be explicit enough to distinguish from other groups. Clicking the name of a group takes you to the [guimenu]``Details`` tab of its [guimenu]``System Group Details`` page. Refer to xref:reference:systesms/system-groups.adoc[] for more information.
+* [guimenu]``Systems`` -- Total number of systems in the group. Clicking the number takes you to the [guimenu]``Systems`` tab of the [guimenu]``System Group Details`` page for the group. Refer to xref:reference:systesms/system-groups.adoc[] for more information.
 * [guimenu]``Use in SSM`` -- Clicking the [guimenu]``Use in SSM`` link in this column loads all and only the systems in the selected group and launches the [guimenu]``System Set Manager`` immediately. Refer to xref:reference:systems/ssm-overview.adoc[] for more information.
 
 
