--- a/modules/reference/pages/systems/systems-overview.adoc
+++ b/modules/reference/pages/systems/systems-overview.adoc
@@ -59,7 +59,7 @@ If so, the package appears in the list of available package updates.
 ====
 If {productname} identifies package updates for the system, but the package updater (such as Red Hat Update Agent or {yast}) responds with a message such as "Your system is fully updated", a conflict likely exists in the system's package profile or in the [path]``up2date`` configuration file.
 To resolve the conflict, either schedule a package list update or remove the packages from the package exceptions list.
-For more information, see <<s3-sm-system-details>>.
+For more information, see xref:reference:systems/system-details.adoc[].
 ====
 +
 
@@ -69,7 +69,7 @@ Total number of configuration files applicable to the system.
 
 Base Channel::
 The primary channel for the system based on its operating system.
-For more information, see <<ref.webui.channels.software>>.
+For more information, see xref:reference:software/channel-details.adoc[].
 +
 
 System Type::
@@ -85,13 +85,13 @@ All of the options described above can be applied within these pages.
 
 The menu:Main Menu[Systems > Overview] page provides a summary of your systems, including their status, number of associated patches (errata) and packages, and their so-called system type.
 Clicking the name of a system takes you to its [guimenu]``System Details`` page.
-For more information, see <<s3-sm-system-details>>.
+For more information, see xref:reference:systems/system-details.adoc[].
 
 Clicking the btn:[View System Groups] button at the top of the page takes you to a summary of your system groups.
 It identifies group status and displays the number of systems contained.
 Clicking the number of systems in a group takes you to the menu:Main Menu[Systems > Systems Groups > Systems] tab.
 Selecting a group name takes you to the menu:Main Menu[Systems > System Groups > Group Details] tab for that system group.
-For more information, see <<ref.webui.systems.systemgroups.details>>.
+For more information, see xref:reference:systems/system-groups.adoc[].
 
 You can also click btn:[Use in SSM] from the menu:Systems[Overview > View System Groups] page to go directly to the menu:Systems[System Set Manager].
-For more information, see <<ref.webui.systems.ssm>>.
+For more information, see xref:reference:systems/ssm-overview.adoc[].
