--- a/modules/reference/pages/users/users-menu.adoc
+++ b/modules/reference/pages/users/users-menu.adoc
@@ -13,6 +13,6 @@ Once all fields are completed, click the btn:[Create Login] button.
 If you want to set permissions and options for the new user, click the name in the list.
 The [guimenu]``User Details`` page for this user provides several tabs of options.
 
-Refer to <<s3-sm-user-active-details>> for detailed descriptions of each tab.
+Refer to xref:reference:users/active-users.adoc[] for detailed descriptions of each tab.
 
 
