--- a/modules/reference/pages/patches/applying-patches.adoc
+++ b/modules/reference/pages/patches/applying-patches.adoc
@@ -20,7 +20,7 @@ In addition, users with appropriate roles can apply patches using two other meth
 [IMPORTANT]
 ====
 If you use scheduled package installation, the packages or patches are installed via the {productname} daemon ([command]``rhnsd``). You must enable the {productname} daemon on your systems.
-For more information about the {productname} daemon, see <<bp.contact.methods.rhnsd>>.
+For more information about the {productname} daemon, see xref:client-configuration:contact-methods.adoc[].
 ====
 
 
