--- a/modules/reference/pages/systems/activation-keys.adoc
+++ b/modules/reference/pages/systems/activation-keys.adoc
@@ -29,7 +29,7 @@ To create an activation key:
 . Select menu:Main Menu[Systems > Activation Keys] from the left bar.
 . Click the [guimenu]``Create Key`` link at the upper right corner.
 . [guimenu]``Description`` -- Enter a [guimenu]``Description`` to identify the generated activation key.
-. [guimenu]``Key`` -- Either choose automatic generation by leaving this field blank or enter the key you want to generate in the [guimenu]``Key`` field. This string of characters can then be used with [command]``rhnreg_ks`` to register client systems with {productname}. Refer to <<s3-sm-system-keys-multiple>> for details.
+. [guimenu]``Key`` -- Either choose automatic generation by leaving this field blank or enter the key you want to generate in the [guimenu]``Key`` field. This string of characters can then be used with [command]``rhnreg_ks`` to register client systems with {productname}. Refer to xref:reference:systems/activation-keys.adoc[] for details.
 +
 [WARNING]
 .Allowed Characters
