--- a/modules/reference/pages/systems/system-details/sd-audit.adoc
+++ b/modules/reference/pages/systems/system-details/sd-audit.adoc
@@ -3,12 +3,8 @@
 
 Via the [guimenu]``Audit`` tab, view OpenSCAP scan results or schedule scans.
 For more information on auditing and OpenSCAP, refer to
-ifndef::env-github,backend-html5[]
-<<ref.webui.audit>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-audit.adoc#ref.webui.audit, Audit>>.
-endif::[]
+xref:reference:audit/audit-menu.adoc[].
+
 
 image::system_details_traditional_list_audit.png[scaledwidth=80%]
 
