--- a/modules/reference/pages/systems/system-details/sd-groups.adoc
+++ b/modules/reference/pages/systems/system-details/sd-groups.adoc
@@ -16,7 +16,7 @@ Only System Group Administrators and {productname} Administrators can remove sys
 Non-admins see a [guimenu]``Review this system's group membership`` page.
 To remove the system from one or more groups, select the respective check boxes of these groups and click the btn:[Leave Selected Groups] button.
 To see the [guimenu]``System Group Details`` page, click the group's name.
-Refer to <<ref.webui.systems.systemgroups.details>> for more information.
+Refer to xref:reference:systems/system-groups.adoc[] for more information.
 
 
 
