--- a/modules/reference/pages/users/active-users.adoc
+++ b/modules/reference/pages/users/active-users.adoc
@@ -10,7 +10,7 @@ There are four columns of information for each user:
 
 * [guimenu]``Username`` -- The login name of the user.
 Clicking a user name displays the [guimenu]``User Details`` page for the user.
-Refer to <<s3-sm-user-active-details>> for more information.
+Refer to xref:reference:users/user-details.adoc[] for more information.
 * [guimenu]``Real Name`` -- The full name of the user (last name, first name).
 * [guimenu]``Roles`` -- List of the user's privileges, such as organization administrator, channel administrator and normal user.
 Users can have multiple roles.
