cleaned up remaining xrefs across all books

--- a/modules/administration/pages/autoyast-example.adoc
+++ b/modules/administration/pages/autoyast-example.adoc
@@ -97,13 +97,8 @@ Use this enhancement fragment to add child channels:
 Replace [replaceable]``channel-label`` and [replaceable]``distribution-label`` with the correct labels (such as `sles12-sp4-updates-x86_64` and `sles12-sp4-x86_64`).
 Ensure that the distribution label corresponds to the Autoinstallable Distribution.
 Set the variables (such as ``$c_server``) according to your environment.
-For information about variables, see
-ifdef::env-github,backend-html5[]
-<<reference-webui-systems-autoinstallation.adoc#s4-sm-system-kick-dist-variables, Autoinstallable Distribution Variables>>.
-endif::[]
-ifndef::env-github,backend-html5[]
-<<s4-sm-system-kick-dist-variables>>.
-endif::[]
+For information about variables, see xref:reference:systems/autoinst-distributions.adoc[].
+
 
 Here is a literal example for `sles12-sp4-x86_64`:
 
