fixed sect title out of sequence in retail

--- a/modules/retail/pages/retail-components.adoc
+++ b/modules/retail/pages/retail-components.adoc
@@ -12,7 +12,7 @@ image::retail_ref_arch.png[scaledwidth=80%]
 
 
 [[retail.sect.components.central-server]]
-=== {susemgr} Server
+== {susemgr} Server
 
 The {susemgr} server contains information about infrastructure, network topology, and everything required to automate image deployment and perform day-to-day operations on branches and terminals.
 This can include database entries of registered systems, Salt pillar data for images, image assignments, partitioning, network setup, network services, and more.
@@ -20,7 +20,7 @@ This can include database entries of registered systems, Salt pillar data for im
 
 
 [[retail.sect.components.build-hosts]]
-=== Build Hosts
+== Build Hosts
 
 Build hosts can be arbitrary servers or virtual machines.
 They are used to securely build operating system images.
@@ -29,7 +29,7 @@ Build hosts should be based on {sls}{nbsp}12 SP3.
 
 
 [[retail.sect.components.branch-server]]
-=== Branch Server
+== Branch Server
 
 Branch servers should be physically located close to point-of-service terminals, such as in an individual store or branch office.
 We recommend you have a fast network connection between the branch server and its terminals.
@@ -46,7 +46,7 @@ The branch server can operate in several different network configurations:
 For more information on {smr} Branch servers, see documentation on {susemgr} Proxy servers.
 
 [[retail.sect.components.pos-terminals]]
-=== Point-of-Service Terminals
+== Point-of-Service Terminals
 
 Point-of-Service (PoS) terminals can come in many different formats, such as point-of-sale terminals, kiosks, digital scales, self-service systems, and reverse-vending systems.
 Every terminal, however, is provided by a vendor, who set basic information about the device in the firmware.
