--- a/modules/ROOT/pages/release-notes-version-4.0.adoc
+++ b/modules/ROOT/pages/release-notes-version-4.0.adoc
@@ -19,6 +19,7 @@ include::ROOT:partial$entities.adoc[]
 The following list covers the primary content changes and additions.
 
 .Changes During {docversion}
+* xrefs have been fully restored
 * Updated ISS section
 * Updated troubleshooting
 * Updated IBM Z section
@@ -40,13 +41,11 @@ The following list covers the primary content changes and additions.
 * General editing and clean-up on many documents
 
 
+
 === Known Issues in {docversion}
 
 xref-converter.rb::
-The converter still requires refactoring as several links are incorrectly transforming during PDF conversion.
-
-xrefs::
-Some cross references are broken leading between books. Fixes for these will be submitted in an update.
+Our custom Asciidoctor xref extension converter requires minor refactoring as several links are incorrectly transforming during our PDF conversion. The cross reference styling will seem a little strange in our PDFs until we make the change.
 
 search::
 The search field has been removed from the {productname} documentation WebUI. Use the **Help -> Search** page in the WebUI to look for topics. Search will be integrated into the documentation WebUI in an update. Search is also available on link:https:/www.suse.com/documentation/suse-manager-4/[].
