--- a/modules/ROOT/pages/release-notes-version-4.0.adoc
+++ b/modules/ROOT/pages/release-notes-version-4.0.adoc
@@ -19,7 +19,16 @@ include::ROOT:partial$entities.adoc[]
 The following list covers the primary content changes and additions.
 
 .Changes During {docversion}
-* xrefs have been fully restored
+* xrefs have been fully restored across books
+* Update to left nav bar
+* Update to centOS client docs
+* Add spacewalk-common-channels to Ubuntu client config
+* Proxy setup cleanup
+* Proxy install cleanup
+* Add uyuni/suma example grafana dashboard
+* Explain how comps file are processed
+* Update to the Salt Formula path
+* Salt Mine edits
 * Updated ISS section
 * Updated troubleshooting
 * Updated IBM Z section
