fixed typo in pdf builder for retail

--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -73,6 +73,6 @@ include::modules/retail/pages/retail-migration-slepostosuma.adoc[leveloffset=+2]
 //End matter
 include::modules/retail/pages/retail-next.adoc[leveloffset=+2]
 
-include::modules/retail/pages/common_gfdl1.2_i.adoc[eveloffset=+2]
+include::modules/retail/pages/common_gfdl1.2_i.adoc[leveloffset=+2]
 
 endif::[]
