adjusted RN and added missing images

--- a/modules/ROOT/pages/release-notes-version-4.0.adoc
+++ b/modules/ROOT/pages/release-notes-version-4.0.adoc
@@ -53,11 +53,11 @@ The following list covers the primary content changes and additions.
 
 === Known Issues in {docversion}
 
-xref-converter.rb::
+xref-converter.rb - (Affects PDF Documents)::
 Our custom Asciidoctor xref extension converter requires minor refactoring as several links are incorrectly transforming during our PDF conversion. The cross reference styling will seem a little strange in our PDFs until we make the change.
 
-search::
-The search field has been removed from the {productname} documentation WebUI. Use the **Help -> Search** page in the WebUI to look for topics. Search will be integrated into the documentation WebUI in an update. Search is also available on link:https:/www.suse.com/documentation/suse-manager-4/[].
+search - (Affects the Product WebUI)::
+The Algolia search field has been removed from the {productname} documentation WebUI. Use the **Help -> Search** page in the WebUI to look for topics. Search will be integrated into the documentation WebUI in an update. Search is also available on link:https:/www.suse.com/documentation/suse-manager-4/[].
 +
 [NOTE]
 ====
