--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -157,7 +157,11 @@ The `uid` attribute passed in the SAML:Attribute must be created in the {product
 
 After the authentication with the IdP using the user `orgadmin` is successful, you will be logged in into {productname} as the `orgadmin` user, provided that the `orgadmin` user exists in {productname}.
 
-NOTE: Using SSO is mutually exclusive with other types of authentication: it is either enabled or disabled. SSO is disabled by default.
+[NOTE]
+====
+Using SSO is mutually exclusive with other types of authentication: it is either enabled or disabled.
+SSO is disabled by default.
+====
 
 .Procedure: Enabling SSO
 
