remove 'may', correct typo on 'receive'.

--- a/modules/administration/pages/virtual-hosts.adoc
+++ b/modules/administration/pages/virtual-hosts.adoc
@@ -115,6 +115,6 @@ If you do not refresh the data from a new Virtual Host Manager, host data will n
 
 [NOTE]
 ====
-Depending on your environment and settings, you may recieve an ``invalid certificate`` error when you connect to the server.
+Depending on your environment and settings, you might receive an ``invalid certificate`` error when you connect to the server.
 If this occurs, check that your SSL certificate is current, run the [command]``update-ca-certificates`` command on the command line to re-trust your certificate, and restart the spacewalk services.
 ====
